# CRM-system

./: .env.template  Dockerfile  README.en.md  README.ru.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
advertisements/: admin.py  forms.py  models.py  urls.py  views.py
advertisements/locale/en/LC_MESSAGES/: django.po
advertisements/locale/ru/LC_MESSAGES/: django.po
advertisements/migrations/: 0001_initial.py  0002_alter_advertisement_channel_alter_advertisement_cost_and_more.py
advertisements/templates/advertisements/: ads-create.html  ads-delete.html  ads-detail.html  ads-list.html  ads-statistic.html  ads-update.html
advertisements/tests/: test_forms.py  test_models.py  test_views.py
config/: settings.py  urls.py
contracts/: admin.py  forms.py  models.py  urls.py  views.py
contracts/locale/en/LC_MESSAGES/: django.po
contracts/locale/ru/LC_MESSAGES/: django.po
contracts/migrations/: 0001_initial.py  0002_initial.py
contracts/templates/contracts/: contracts-create.html  contracts-delete.html  contracts-detail.html  contracts-list.html  contracts-update.html
contracts/tests/: test_forms.py  test_models.py  test_views.py
crm/: cache.py  decorators.py  forms.py  mixins.py  models.py  urls.py  views.py
crm/locale/en/LC_MESSAGES/: django.po
crm/locale/ru/LC_MESSAGES/: django.po
crm/management/commands/: create_groups.py
crm/migrations/: 0001_permission_groups_initial.py
crm/tests/: test_decorators.py  test_forms.py  test_mixins.py  test_views.py
crm/utils/: __init__.py  factories.py
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/locale/en/LC_MESSAGES/: django.po
customers/locale/ru/LC_MESSAGES/: django.po
customers/migrations/: 0001_initial.py  0002_alter_customer_contract.py
customers/templates/customers/: customers-create.html  customers-delete.html  customers-detail.html  customers-list.html  customers-update.html
customers/tests/: test_forms.py  test_models.py  test_views.py
leads/: admin.py  forms.py  models.py  urls.py  views.py
leads/locale/en/LC_MESSAGES/: django.po
leads/locale/ru/LC_MESSAGES/: django.po
leads/migrations/: 0001_initial.py
leads/templates/leads/: leads-create.html  leads-delete.html  leads-detail.html  leads-list.html  leads-update.html
leads/tests/: test_forms.py  test_models.py  test_views.py
nginx/: nginx.conf
products/: admin.py  forms.py  models.py  urls.py  views.py
products/locale/en/LC_MESSAGES/: django.po
products/locale/ru/LC_MESSAGES/: django.po
products/migrations/: 0001_initial.py
products/templates/products/: products-create.html  products-delete.html  products-detail.html  products-list.html  products-update.html
products/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
static/: style.css
templates/: _base.html  form_fields.html  index.html  login.html
templates/locale/en/LC_MESSAGES/: django.po
templates/locale/ru/LC_MESSAGES/: django.po
